# porchsongs

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.aoe/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker.yml  prepare-release.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_song_font_size.py  002_add_song_uuid.py  003_fix_refresh_token_index.py  003_rename_lyrics_to_content.py  004_add_system_prompt_fields_to_profile.py  005_drop_profile_name.py  006_drop_vestigial_columns.py  007_add_platform_key_disabled.py  008_add_song_updated_at.py  009_add_user_terms_accepted_at.py
backend/: requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py
e2e/: package-lock.json  package.json  tsconfig.json
e2e/fixtures/: auth-helpers.ts  mock-data.ts  mock-sse.ts  test-helpers.ts
e2e/oss/: library.spec.ts  navigation.spec.ts  rewrite-flow.spec.ts  settings.spec.ts  smoke.spec.ts  song-lifecycle.spec.ts
e2e/premium/: account.spec.ts  auth.spec.ts  quota.spec.ts
e2e/scripts/: start-server.sh
frontend/: eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/css/: style.css
frontend/js/: api.js  app.js  chat.js  comparison.js  library.js  profile.js  rewrite.js  workshop.js
scripts/: export_openapi.py  seed-library.sh  upload-pr-video.sh
tests/: conftest.py  test_api.py  test_auth.py  test_chord_parser.py  test_llm_endpoints.py  test_llm_service.py  test_pdf_service.py  test_rate_limit.py  test_song_uuid.py
tips/: definition-of-done.md  playwright.md  sandbox.md
(+173 files in other folders)
